REDBOX-219 #comment Adding CurationManager to the installation fray!